--- a/chhinalaw/public/index.html
+++ b/chhinalaw/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Designed and Built by Shaan A. Hashmi -->
+    <!-- See more at www.shaanhashmi.com -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Lora&family=Source+Sans+Pro:wght@200;300;400&display=swap');
+      </style> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
